--- a/src/frontend/munhunger/src/app/app.component.html
+++ b/src/frontend/munhunger/src/app/app.component.html
@@ -1,34 +1,24 @@
-<div class="w3-panel w3-light-gray header">
-  <img src="/assets/logo.png" class="w-loggo">
-  <span class="w3-lobster w3-xxxlarge w3-opacity title">Wunderbaren</span>
-</div>
-
-<div class="center">
-  <div class="w3-panel w3-rest w3-twothird w3-animate-opacity">
-    <stock></stock>
-  </div>
-  <div class="w3-panel w3-border-left w3-rest w3-third w3-animate-opacity">
-    <event></event>
+<div class="parallax header" style="background-image: url('http://wallpapercave.com/wp/WShsIJl.jpg');">
+  <div class="header-text">
+    <h1>munHunger</h1>
+    <h3>The frontend of backend</h3>
   </div>
 </div>
-<!--
-<div class="w3-container w3-padding w3-light-gray footer">
-  <div *ngIf="!userService.isLoggedIn">
-    Om du inte vill prata med bartendern så går det bra att beställa i mobilen om du först loggar in
-    <small>
-      (beställningen hämtas i baren)
-    </small>
-    <button (click)="userService.requestLogin = true" class="w3-btn w3-blue-grey" style="float:right">Logga in</button>
-  </div>
-  <div *ngIf="userService.isLoggedIn">
-    <div>
-      {{userService.userData ? 'Inloggad som: ' + userService.userData.username + '  ' + userService.userData.balance + 'kr laddat' : ''}}
-    </div>
-  </div>
+<div class="content">
+  <h3>About</h3>
+  Munhunger is the most professional developer that you can find... and he is humble!<br />
+  Mainly a backend developer, but this webpage shows that he is a true full-stack developer that can do everything that a frontend developer can.
 </div>
-<div class="footer message-dialog w3-leftbar w3-light-gray w3-animate-bottom">
-  <i>Skriv något olämpligt till bartendern</i>
+<div class="parallax" style="background-image: url('https://userscontent2.emaze.com/images/5a366b6e-c710-42d0-aaa9-37dc1150de0f/a852c9730e54eee56a743b0424e25a24.jpg');"></div>
+<div class="content">
+  <h3>References</h3>
+  "munHunger is truly the best developer that I know" - his mom
 </div>
-
-<login></login>
--->
+<div class="parallax header" style="background-image: url('http://wallpapercave.com/wp/WShsIJl.jpg');"></div>
+<div class="content contact">
+  <h3>Contact</h3>
+  070 666 42 42 <br />
+  The <b>best</b> address in the world<br />
+  Uppsala<br />
+  Probably has a linkedin page
+</div>
