--- a/src/frontend/munhunger/src/app/app.component.css
+++ b/src/frontend/munhunger/src/app/app.component.css
@@ -1,27 +1,61 @@
-.header{
-  margin-top: 0px;
-}
-.w-loggo{
-  margin-left: 25px;
-  margin-top:-50px;
-  margin-bottom:-50px;
+.parallax
+{
+  /* Set a specific height */
+  height: 500px; 
+
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
-.center{
-  margin: auto;
-  width:90%;
-}
-.footer{
-  position: fixed;
-  width:100%;
-  bottom: 0px;
-  height: 50px;
+.header
+{
+  font-family: Arial, Helvetica, sans-serif;
+  color: #DDD;
+  position:relative;
+  height: 925px;
 }
 
-.message-dialog{
-  bottom:50px;
-  padding: 5px;
-  right: 5px;
-  width: 200px;
-  height: 325px;
+.content
+{
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 100px;
+  text-align: justify;
+  letter-spacing: 1px;
+  word-spacing: 2px;
+  line-height: 25px;
+  font-size: 16px;
+}
+
+.content h3
+{
+  text-align: center;
+  font-weight: 600;
+  margin-bottom: 20px;
+}
+
+.contact
+{
+  padding-left: 500px;
+  padding-right: 500px;
+}
+
+.header-text
+{ 
+  position: absolute;
+  left: 150px;
+  bottom: 20px;
+}
+
+.header h3
+{
+  margin-top: -20px;
+  font-weight: 700;
+}
+
+.header h1
+{
+  font-weight: 900;
 }
