first pick of images

--- a/src/frontend/munhunger/src/app/app.component.css
+++ b/src/frontend/munhunger/src/app/app.component.css
@@ -8,6 +8,12 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+
+  -webkit-filter: blur(0px);
+  -moz-filter: blur(0px);
+  -o-filter: blur(0px);
+  -ms-filter: blur(0px);
+  filter: blur(0px);
 }
 
 .header
