--- a/src/frontend/munhunger/src/app/app.component.html
+++ b/src/frontend/munhunger/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="parallax header" style="background-image: url('http://wallpapercave.com/wp/WShsIJl.jpg');">
+<div class="parallax header" style="background-image: url('/assets/DSC00738.jpg');">
   <div class="header-text">
     <h1>munHunger</h1>
     <h3>The frontend of backend</h3>
@@ -9,12 +9,17 @@
   Munhunger is the most professional developer that you can find... and he is humble!<br />
   Mainly a backend developer, but this webpage shows that he is a true full-stack developer that can do everything that a frontend developer can.
 </div>
-<div class="parallax" style="background-image: url('https://userscontent2.emaze.com/images/5a366b6e-c710-42d0-aaa9-37dc1150de0f/a852c9730e54eee56a743b0424e25a24.jpg');"></div>
+<div class="parallax" style="background-image: url('/assets/DSC02958.jpg');"></div>
+<div class="content">
+  <h3>Skills</h3>
+  Munhunger Like holy fuck is he skilled
+</div>
+<div class="parallax" style="background-image: url('/assets/DSC00368.jpg');"></div>
 <div class="content">
   <h3>References</h3>
   "munHunger is truly the best developer that I know" - his mom
 </div>
-<div class="parallax header" style="background-image: url('http://wallpapercave.com/wp/WShsIJl.jpg');"></div>
+<div class="parallax header" style="background-image: url('/assets/DSC02928.jpg');"></div>
 <div class="content contact">
   <h3>Contact</h3>
   070 666 42 42 <br />
