--- a/src/frontend/munhunger/src/app/app.component.html
+++ b/src/frontend/munhunger/src/app/app.component.html
@@ -1,7 +1,10 @@
-<div class="parallax header" style="background-image: url('/assets/DSC00738.jpg');">
+<div class="parallax header" style="background-image: url('/assets/DSC02958.jpg');">
   <div class="header-text">
     <h1>munHunger</h1>
     <h3>The frontend of backend</h3>
+  </div>
+  <div class="scroll-down">
+    <span class="glyphicon glyphicon-menu-down"></span>
   </div>
 </div>
 <div class="content">
@@ -9,21 +12,74 @@
   Munhunger is the most professional developer that you can find... and he is humble!<br />
   Mainly a backend developer, but this webpage shows that he is a true full-stack developer that can do everything that a frontend developer can.
 </div>
-<div class="parallax" style="background-image: url('/assets/DSC02958.jpg');"></div>
+<div class="parallax" style="background-image: url('/assets/DSC00368.jpg');"></div>
 <div class="content">
   <h3>Skills</h3>
   Munhunger Like holy fuck is he skilled
 </div>
-<div class="parallax" style="background-image: url('/assets/DSC00368.jpg');"></div>
+<div class="parallax" style="background-image: url('/assets/DSC00738.jpg');"></div>
 <div class="content">
   <h3>References</h3>
-  "munHunger is truly the best developer that I know" - his mom
+  <div class="row">
+    <div class="col-md-8">
+      <div class="quote">
+          Marcus brinner för systemutveckling och att ta till sig nya tekniska utmaningar.
+          Han är driven amitiös, engagerad och han har lätt att sätta sig in i såväl nya verksamhetsområden som tekniska svårigheter.
+        <p>
+          Marcus har utfört arbetsuppgifterna med utomordentligt gott resultat och vi ger honom våra allra bästa rekommendationer.
+        </p>
+        <div class="author-right">
+          Marie Johansson - Läkemedelsverket
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-4"></div>
+    <div class="col-md-8">
+      <div class="quote">
+        munHunger is truly the best developer that I know 
+        <div class="author-left">
+          his mom
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="parallax" style="background-image: url('/assets/DSC00288.jpg');"></div>
+<div class="content">
+  <h3>Experiences</h3>
+  <div class="row">
+    <div class="col-md-1"></div>
+    <div class="col-md-5">
+      <h4>Work</h4>
+      <span class="timespan">2017-</span><span class="title">Backend developer</span> <span class="employer">24Money</span><br />
+      <span class="workareas">Java, Jersey, Hibernate, OAuth, MySQL, OpenID Connect, Gluu, Tomcat, Gradle</span>
+      <br />
+      <span class="timespan">2015-2017</span><span class="title">Full-stack developer</span> <span class="employer">Läkemedelsverket</span><br />
+      <span class="workareas">Java, .NET WPF, Angular2, Documentum, Tomcat</span>
+    </div>
+    <div class="col-md-5">
+      <h4>Hobby</h4>
+      <span class="timespan">2017</span><span class="title">Wunderbaren</span><br />
+      <span class="workareas">A webpage keeping track on prices and current stock in a bar</span>
+    </div>
+  </div>
 </div>
 <div class="parallax header" style="background-image: url('/assets/DSC02928.jpg');"></div>
 <div class="content contact">
   <h3>Contact</h3>
-  070 666 42 42 <br />
-  The <b>best</b> address in the world<br />
-  Uppsala<br />
-  Probably has a linkedin page
+  <div class="row">
+    <div class="col-md-2"></div>
+    <div class="col-md-4">
+      070 345 1965 <br />
+      Swedenborgsgatan 34A<br />
+      Uppsala<br />
+    </div>
+    <div class="col-md-4">
+      <a href="mailto:marcusmunger@hotmail.com">mail</a><br />
+      <a href="https://www.linkedin.com/in/marcus-m%C3%BCnger-034398123/">linkedin</a><br />
+      <a href="assets/CV.pdf">CV</a><br />
+    </div>
+  </div>
 </div>
