Added animations and a list of skills

--- a/src/frontend/munhunger/src/app/app.component.html
+++ b/src/frontend/munhunger/src/app/app.component.html
@@ -1,9 +1,9 @@
 <div class="parallax header" style="background-image: url('/assets/DSC02958.jpg');">
-  <div class="header-text">
+  <div class="header-text w3-animate-fading">
     <h1>munHunger</h1>
     <h3>The frontend of backend</h3>
   </div>
-  <div class="scroll-down">
+  <div class="scroll-down w3-animate-fading">
     <span class="glyphicon glyphicon-menu-down"></span>
   </div>
 </div>
@@ -15,7 +15,25 @@
 <div class="parallax" style="background-image: url('/assets/DSC00368.jpg');"></div>
 <div class="content">
   <h3>Skills</h3>
-  Munhunger Like holy fuck is he skilled
+  <div class="row">
+    <div class="col-md-4"></div>
+    <div class="col-md-4">
+      <ul class="list-group">
+        <li class="list-group-item">Java <span class="badge">Prefered</span></li>
+        <li class="list-group-item">Hibernate</li>
+        <li class="list-group-item">Jersey</li>
+        <li class="list-group-item">Angular2</li>
+        <li class="list-group-item">Javascript</li>
+        <li class="list-group-item">CSS &amp; HTML</li>
+        <li class="list-group-item">Documentum <span class="badge">D2, Webtop</span></li>
+        <li class="list-group-item">Android</li>
+        <li class="list-group-item">C#</li>
+        <li class="list-group-item">.NET</li>
+        <li class="list-group-item">MySQL</li>
+        <li class="list-group-item">PHP</li>
+      </ul>
+    </div>
+  </div>
 </div>
 <div class="parallax" style="background-image: url('/assets/DSC00738.jpg');"></div>
 <div class="content">
