animate opacity to have it not fade in and out

--- a/src/frontend/munhunger/src/app/app.component.html
+++ b/src/frontend/munhunger/src/app/app.component.html
@@ -1,9 +1,9 @@
 <div class="parallax header" style="background-image: url('/assets/DSC02958.jpg');">
-  <div class="header-text w3-animate-fading">
+  <div class="header-text w3-animate-opacity">
     <h1>munHunger</h1>
     <h3>The frontend of backend</h3>
   </div>
-  <div class="scroll-down w3-animate-fading">
+  <div class="scroll-down w3-animate-opacity">
     <span class="glyphicon glyphicon-menu-down"></span>
   </div>
 </div>
