--- a/src/frontend/munhunger/src/app/app.component.html
+++ b/src/frontend/munhunger/src/app/app.component.html
@@ -56,9 +56,19 @@
     <div class="col-md-4"></div>
     <div class="col-md-8">
       <div class="quote">
-        munHunger is truly the best developer that I know 
+        It's fun to watch his mind at work. It's like watching a pilot fly a giant airplane. You think it could not possibly take off, yet all of a sudden it's rising as if it's light as a feather. 
         <div class="author-left">
-          his mom
+          Lizinka Palmstierna
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-8">
+      <div class="quote">
+          He is truly the best and most handsome developer I know
+        <div class="author-right">
+          His mom
         </div>
       </div>
     </div>
