added more information

--- a/src/frontend/munhunger/src/app/app.component.html
+++ b/src/frontend/munhunger/src/app/app.component.html
@@ -1,23 +1,30 @@
 <div class="parallax header" style="background-image: url('/assets/DSC02958.jpg');">
   <div class="header-text w3-animate-opacity">
-    <h1>munHunger</h1>
+    <h1>Marcus Münger</h1>
     <h3>The frontend of backend</h3>
   </div>
   <div class="scroll-down w3-animate-opacity">
     <span class="glyphicon glyphicon-menu-down"></span>
   </div>
 </div>
-<div class="content">
-  <h3>About</h3>
-  Munhunger is the most professional developer that you can find... and he is humble!<br />
-  Mainly a backend developer, but this webpage shows that he is a true full-stack developer that can do everything that a frontend developer can.
+<div class="content row">
+  <div class="col-md-6 col-md-offset-3">
+    <h3>About</h3>
+    <p>
+      I am a driven developer who does full-stack and backend work.
+      I love finding new challenges and solutions to both old and new problems. 
+      This has guided me to try and learn as much as possible so that I can become the best developer that I can be.
+    </p>
+    <p>
+      My free time consists working on hobby projects, watching movies and playing boardgames and roleplaying games.
+    </p>
+  </div>
 </div>
 <div class="parallax" style="background-image: url('/assets/DSC00368.jpg');"></div>
 <div class="content">
   <h3>Skills</h3>
   <div class="row">
-    <div class="col-md-4"></div>
-    <div class="col-md-4">
+    <div class="col-md-4 col-md-offset-4">
       <ul class="list-group">
         <li class="list-group-item">Java <span class="badge">Prefered</span></li>
         <li class="list-group-item">Hibernate</li>
@@ -53,12 +60,11 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-md-4"></div>
-    <div class="col-md-8">
+    <div class="col-md-8 col-md-offset-4">
       <div class="quote">
         It's fun to watch his mind at work. It's like watching a pilot fly a giant airplane. You think it could not possibly take off, yet all of a sudden it's rising as if it's light as a feather. 
         <div class="author-left">
-          Lizinka Palmstierna
+          Lizinka Palmstierna - 24Money
         </div>
       </div>
     </div>
@@ -66,9 +72,9 @@
   <div class="row">
     <div class="col-md-8">
       <div class="quote">
-          He is truly the best and most handsome developer I know
+          He is clever, not afraid to speak his mind and have an eye for IT-security
         <div class="author-right">
-          His mom
+          Marika Svensson - 24Money
         </div>
       </div>
     </div>
@@ -78,8 +84,7 @@
 <div class="content">
   <h3>Experiences</h3>
   <div class="row">
-    <div class="col-md-1"></div>
-    <div class="col-md-5">
+    <div class="col-md-5 col-md-offset-1">
       <h4>Work</h4>
       <span class="timespan">2017-</span><span class="title">Backend developer</span> <span class="employer">24Money</span><br />
       <span class="workareas">Java, Jersey, Hibernate, OAuth, MySQL, OpenID Connect, Gluu, Tomcat, Gradle</span>
@@ -95,16 +100,15 @@
   </div>
 </div>
 <div class="parallax header" style="background-image: url('/assets/DSC02928.jpg');"></div>
-<div class="content contact">
+<div class="content">
   <h3>Contact</h3>
   <div class="row">
-    <div class="col-md-2"></div>
-    <div class="col-md-4">
+    <div class="col-md-4 col-md-offset-2 col-sm-6">
       070 345 1965 <br />
       Swedenborgsgatan 34A<br />
       Uppsala<br />
     </div>
-    <div class="col-md-4">
+    <div class="col-md-4 col-sm-6">
       <a href="mailto:marcusmunger@hotmail.com">mail</a><br />
       <a href="https://www.linkedin.com/in/marcus-m%C3%BCnger-034398123/">linkedin</a><br />
       <a href="assets/CV.pdf">CV</a><br />
