--- a/src/frontend/munhunger/src/app/app.component.html
+++ b/src/frontend/munhunger/src/app/app.component.html
@@ -9,6 +9,7 @@
 </div>
 <div class="content row">
   <div class="col-md-6 col-md-offset-3">
+    <expand-modal></expand-modal>
     <h3>About</h3>
     <p>
       I am a driven developer who does full-stack and backend work.
