--- a/src/frontend/munhunger/src/app/expand_modal/expandModal.component.css
+++ b/src/frontend/munhunger/src/app/expand_modal/expandModal.component.css
@@ -4,7 +4,6 @@
     overflow: hidden; 
     cursor: pointer;
     box-shadow: 0px 0px 5px #000;
-    background-color: #F00;
 }
 
 .container:hover
@@ -19,4 +18,14 @@
     top: 50px;
     left: 0px;
     z-index: 999;
+}
+
+.overlay
+{
+    position: fixed;
+    width:100%;
+    height:100%;
+    left: 0px;
+    top: 0px;
+    background-color: rgba(0, 0, 0, 0.5);
 }
