--- a/src/frontend/munhunger/src/app/expand_modal/expandModal.component.css
+++ b/src/frontend/munhunger/src/app/expand_modal/expandModal.component.css
@@ -1,23 +1,24 @@
 .container
 {
-    position:relative; 
+    position: relative; 
     overflow: hidden; 
     cursor: pointer;
-    box-shadow: 0px 0px 5px #000;
+    display: inline-block;
 }
 
 .container:hover
 {
-    box-shadow: 0px 0px 10px #000;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
 }
 
 .open
 {
     position: fixed;
-    background-color: #0F0;
+    background-color: #FFF;
     top: 50px;
     left: 0px;
     z-index: 999;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5);
 }
 
 .overlay
@@ -27,5 +28,6 @@
     height:100%;
     left: 0px;
     top: 0px;
+    z-index: 998;
     background-color: rgba(0, 0, 0, 0.5);
 }
