--- a/src/frontend/munhunger/src/app/app.component.html
+++ b/src/frontend/munhunger/src/app/app.component.html
@@ -8,7 +8,7 @@
   </div>
 </div>
 <div class="content row">
-  <div class="col-md-6 col-md-offset-3">
+  <div class="col-md-6 col-md-offset-3 col-sm-12">
     <h3>About</h3>
     <p>
       I am a driven developer who does full-stack and backend work.
